--- a/package.json
+++ b/package.json
@@ -7,18 +7,33 @@
     "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "id": "0.0.0",
     "knex": "^0.95.4",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/node-api2-project.git"
-  }
+  },
+  "description": "## Introduction",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/node-api2-project/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/node-api2-project#readme",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
